Add real clear link, empty facet adjustments.

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/form-section-item/_form-section-item.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/form-section-item/_form-section-item.twig
@@ -14,9 +14,13 @@
     <div class="facets-widget-chosen-dropdown">
       <label id="facet_specialties_label">{{ item.title }}</label>
       <ul {{ attributes }}>
-        {% for element in item.elements %}
-          <li {{ element.attributes }}>{{ element.value }}</li>
-        {% endfor %}
+        {% if item.elements %}
+          {% for element in item.elements %}
+            <li {{ element.attributes }}>{{ element.value }}</li>
+          {% endfor %}
+        {% else %}
+
+        {% endif %}
       </ul>
     </div>
   {% elseif item.type == 'radio' %}
