--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/form-section/_form-section.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/form-section/_form-section.scss
@@ -134,6 +134,10 @@
     display: inline-block;
     margin-right: .25em;
   }
+
+  .chosen-container {
+    width: 100% !important;
+  }
 }
 
 .form-section__optional {
