--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/01-colors/_color-vars.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/01-colors/_color-vars.scss
@@ -35,14 +35,14 @@ $growth-lt: #b8d092;
 $growth-ltr: #cedeb3;
 $growth-ltst: #e4edd7;
 
-$tranquil-aa: #247E84;
+$tranquil-aa: #247e84;
 $tranquil: #3fc1cb;
 $tranquil-med: #6fccd4;
 $tranquil-lt: #96d7dd;
 $tranquil-ltr: #b9e3e9;
 $tranquil-ltst: #dbf0f4;
 
-$energy-aa: #BE5409;
+$energy-aa: #be5409;
 $energy: #f47820;
 $energy-med: #f69147;
 $energy-lt: #faab70;
