--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/care-circle-item/care-circle-item.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/care-circle-item/care-circle-item.twig
@@ -4,7 +4,7 @@
    {% if icon %}
      <img class='care-circle__item__icon' src="{{ icon }}" alt='{{ icon_alt }}'/>
    {% endif %}
-   {{ label }}
+      <span class="care-circle__item__label">{{ label }}</span>
    </span>
    {% if url %}</a>{% endif %}
  </li>
