--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/care-circle/_care-circle.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/care-circle/_care-circle.scss
@@ -188,11 +188,13 @@
 }
 
 .care-circle__item {
-  
+  a,
   a:link,
   a:visited {
+    display: block;
     text-decoration: none;
     width: 100%;
+    height: 100%;
     color: $primary-dark;
   }
   
@@ -217,7 +219,6 @@
     
     
     &:nth-of-type(1) {
-      
       &::after {
         position: absolute;
         top: 40%;
@@ -263,7 +264,6 @@
       
       &:nth-of-type(3) {
         order: 4;
-        
         // left
         &::after {
           position: absolute;
@@ -276,7 +276,6 @@
       
       &:nth-of-type(4) {
         order: 3;
-        
         // up
         &::after {
           position: absolute;
@@ -290,7 +289,6 @@
     
     .care-circle--5 & {
       &:nth-of-type(2) {
-        
         &::after {
           position: absolute;
           bottom: -2em;
@@ -313,7 +311,7 @@
       
       &:nth-of-type(4) {
         order: 5;
-        
+
         &::after {
           position: absolute;
           top: -2em;
@@ -337,7 +335,6 @@
     
     .care-circle--6 & {
       &:nth-of-type(2) {
-        
         &::after {
           position: absolute;
           bottom: -2em;
@@ -398,7 +395,6 @@
     
     .care-circle--7 & {
       &:nth-of-type(2) {
-        
         &::after {
           position: absolute;
           bottom: -2em;
@@ -469,7 +465,6 @@
     
     .care-circle--8 & {
       &:nth-of-type(2) {
-        
         &::after {
           position: absolute;
           bottom: -2em;
@@ -640,6 +635,11 @@
   max-width: 60px;
   max-height: 35px;
   margin-bottom: .5em;
+}
+
+.care-circle__item__label {
+  display: block;
+  width: 100%;
 }
 
 .care-circle__text {
