Update SCSS class for Review Summary

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/ratings-count/ratings-count.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/ratings-count/ratings-count.twig
@@ -23,7 +23,7 @@
 {% endif %}
 
 <div class="ratings-count">
-  <div class="ratings-count--ratingof">{{ rating }} out of 5</div>
+  <div class="ratings-count__summary">{{ rating }} out of 5</div>
   <div class="ratings-count__stars ratings-count__stars--{{rating_round}}">
     {% include icon %}
     {% include icon %}
