Update order change for mobile/desktop of Review Summary

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/review/_review.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/review/_review.scss
@@ -49,6 +49,11 @@
       justify-content: flex-end;
       margin-left: 3em;
 
+      &__summary {
+        order: 1;
+        margin-left: .5em;
+      }
+
       .ratings-count__stars {
         width: 100%;
       }
