Focus update ISSUE, alt tag added to TH Watermark, and saving point.

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_01-main-menu-item.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_01-main-menu-item.scss
@@ -250,6 +250,7 @@
 
   // Down triangle
   &::after {
+    @extend %element-focusable;
     content: "";
     display: block;
     margin-right: -6px;
