--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.twig
@@ -14,7 +14,7 @@
     {% endif %}
   </div>
   {% block image_background %}
-    <img class="cta-banner-list__background js-section-animation" src="../../images/th-mark.svg" />
+    <img class="cta-banner-list__background js-section-animation" src="../../images/th-mark.svg" alt=""/>
   {% endblock %}
   <div class="cta-banner-list__buttons js-section-animation">
     {% block icon_buttons %}
