--- a/docroot/themes/custom/tower_health/templates/paragraphs/paragraph--basic-header.html.twig
+++ b/docroot/themes/custom/tower_health/templates/paragraphs/paragraph--basic-header.html.twig
@@ -46,7 +46,7 @@
       "url": image_src,
     },
     "lede": content.field_basic_header_lede,
-    "style": content.field_basic_header_style,
+    "style": content.field_basic_header_style.0['#markup'],
     "link": {
       "url": content.field_basic_header_link.0['#url'],
       "label": content.field_basic_header_link.0['#title'],
