--- a/docroot/themes/custom/tower_health/templates/layout/page--page.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/page--page.html.twig
@@ -43,4 +43,10 @@
  * @see html.html.twig
  */
 #}
-{% include "@pages/_page.twig" %}
+{% include "@pages/_page.twig" with {
+  page_header: page.page_header,
+  full_width: node.field_basic_enable_nav.value ? 'FALSE' : 'TRUE',
+  page_content: page.content,
+  top_sidebar: page.sidebar_first,
+  bottom_sidebar: page.sidebar_second,
+}%}
