add in an example of the component to the search page

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/teaser-list.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/teaser-list.twig
@@ -26,6 +26,10 @@
       {% include "@organisms/teasers/service-teaser/service-teaser.twig" with {
           "service": teaser,
         } %}
+    {% elseif teaser.type == "video" %}
+      {% include "@organisms/teasers/video-teaser/video-teaser.twig" with {
+          "video": teaser,
+        } %}
     {% else %}
       {% include "@organisms/teasers/basic-teaser/basic-teaser.twig" with {
           "basic": teaser,
