display insurance modal

--- a/docroot/themes/custom/tower_health/templates/layout/page--profile.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/page--profile.html.twig
@@ -102,10 +102,12 @@
     "sidebar": true,
     "items": {
       "insurance": {
-        "type": "insurance",
-        "label": "Insurances Accepted",
-        "reference": "insurances",
-        "items": policies,
+        "insurance": {
+          "type": "insurance",
+          "label": "Insurances Accepted",
+          "reference": "insurances",
+          "items": policies
+        },
         "meta": "Please check with your insurance provider before booking an appointment."|t
       }
     }
