add region full content

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/_page.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/_page.twig
@@ -67,7 +67,7 @@
     {{ page.help }}
     {{ messages }}
   {% endblock %}
-  
+
   {% block page_header %}
     {{ page.breadcrumb }}
     {{ page.page_header }}
@@ -76,13 +76,17 @@
   {% block top_sidebar %}
     {{ page.sidebar_first }}
   {% endblock %}
-  
+
   {% block page_content %}
     {{ content }}
   {% endblock %}
-  
+
   {% block bottom_sidebar %}
     {{ page.sidebar_second }}
+  {% endblock %}
+
+  {% block full_content %}
+    {{ page.full_content }}
   {% endblock %}
 
   {% block page_footer %}
