--- a/docroot/themes/custom/tower_health/templates/layout/page--page.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/page--page.html.twig
@@ -43,10 +43,15 @@
  * @see html.html.twig
  */
 #}
+{% set page_base_class = 'page page--container' %}
+{% set full_with = 'false' %}
+
 {% include "@pages/_page.twig" with {
   page_header: page.page_header,
-  full_width: node.field_basic_enable_nav.value ? 'FALSE' : 'TRUE',
   page_content: page.content,
-  top_sidebar: page.sidebar_first,
-  bottom_sidebar: page.sidebar_second,
+  full_content: page.full_content,
+  top_sidebar: page.sidebar_first ?? '' ,
+  bottom_sidebar: page.sidebar_second ?? '',
 }%}
+
+
