--- a/docroot/themes/custom/tower_health/templates/layout/page--profile.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/page--profile.html.twig
@@ -122,5 +122,6 @@
     "items": affiliations
   },
   "rating": rating,
-  "review_amt": review_amt
+  "review_amt": review_amt,
+  "reviews": reviews
 } %}
