--- a/docroot/themes/custom/tower_health/templates/layout/page--page.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/page--page.html.twig
@@ -45,13 +45,13 @@
 #}
 {% set page_base_class = 'page page--container' %}
 {% set full_with = 'false' %}
-
+{{ dd(page.sidebar_second) }}
 {% include "@pages/_page.twig" with {
   page_header: page.page_header,
   page_content: page.content,
   full_content: page.full_content,
-  top_sidebar: page.sidebar_first ?? '' ,
-  bottom_sidebar: page.sidebar_second ?? '',
+  top_sidebar: page.sidebar_first,
+  bottom_sidebar: page.sidebar_second,
 }%}
 
 
