--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/pager/pager.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/pager/pager.twig
@@ -42,7 +42,7 @@
               {% if arrow_previous %}
                 {% include arrow_previous %}
               {% endif %}
-              {{ items.previous.text|default('Previous'|t) }}
+              {{ ('Previous'|t) }}
             </span>
           </a>
         </li>
@@ -77,7 +77,7 @@
           <a class="pager__link pager__link--next" href="{{ items.next.href }}" title="{{ 'Go to next page'|t }}" rel="next"{{ items.next.attributes|without('href', 'title', 'rel') }}>
             <span class="visually-hidden">{{ 'Next page'|t }}</span>
             <span>
-              {{ items.next.text|default('Next'|t) }}
+              {{ ('Next'|t) }}
               {% if arrow_next %}
                 {% include arrow_next %}
               {% endif %}
