build theme video card

--- a/docroot/themes/custom/tower_health/templates/fields/field--field-basic-header-cta-ref.html.twig
+++ b/docroot/themes/custom/tower_health/templates/fields/field--field-basic-header-cta-ref.html.twig
@@ -38,6 +38,4 @@
  * @ingroup themeable
  */
 #}
-{% for item in items %}
-  {{ item.content }}
-{% endfor %}
+{% include '@tower_health/fields/field-clean.html.twig' %}
