--- a/docroot/themes/custom/tower_health/templates/fields/field--field-card-video-ref.html.twig
+++ b/docroot/themes/custom/tower_health/templates/fields/field--field-card-video-ref.html.twig
@@ -33,7 +33,10 @@
  * - field_type: The type of the field.
  * - label_display: The display settings for the label.
  *
+ *
  * @see template_preprocess_field()
+ *
+ * No wrappers. It just doesn't flow with flexbox.
  */
 #}
 {% include '@tower_health/fields/field-clean.html.twig' %}
