--- a/docroot/themes/custom/tower_health/templates/layout/page--profile.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/page--profile.html.twig
@@ -43,85 +43,7 @@
  * @see html.html.twig
  */
 #}
-{% include "@pages/provider-detail/provider-detail.twig" with {
-  "name": title,
-  "lead_title": lede,
-  "img": {
-    "src": src,
-    "alt": alt
-  },
-  "appt_label": "Request an Appointment"|t,
-  "appt_phone": {
-    "number": phone,
-    "label": phone,
-  },
-  "appt_url": "#",
+{% include "@pages/_page.twig" with {
   "appt_icon": cal_icon,
-  "specialties": {
-    "label": "Specialties"|t,
-    "items": specialties
-  },
-  "focus": {
-    "label": "Clinical Areas of Focus"|t,
-    "items": focuses
-  },
-  "locations": {
-    "label": "Locations"|t
-  },
-  "certification": {
-    "label": "Board Certifications"|t,
-    "items": certifications
-  },
-  "education": {
-    "label": "Education"|t,
-    "items": education
-  },
-  "language": {
-    "label": "Languages"|t,
-    "sidebar": true,
-    "items": languages
-  },
-  "contact": {
-    "label": "Contact Information"|t,
-    "sidebar": true,
-    "items": [
-      {
-        "label": "Main:"|t,
-        "link": {
-          "url": "tel:+1" ~ phone,
-          "text": phone
-        }
-      },
-      {
-        "label": "Fax:"|t,
-        "text": phone
-      }
-    ]
-  },
-  "insurance": {
-    "sidebar": true,
-    "items": {
-      "insurance": {
-        "insurance": {
-          "type": "insurance",
-          "label": "Insurances Accepted",
-          "reference": "insurances",
-          "items": policies
-        },
-        "meta": "Please check with your insurance provider before booking an appointment."|t
-      }
-    }
-  },
-  "employed": {
-    "label": "Member of"|t,
-    "sidebar": true
-  },
-  "affiliation": {
-    "label":  "Hospital Affiliation",
-    "sidebar": true,
-    "items": affiliations
-  },
-  "rating": rating,
-  "review_amt": review_amt,
-  "reviews": reviews
+  top_sidebar: page.sidebar_first ?? ''
 } %}
