catch if no icon

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/ratings-count/ratings-count.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/ratings-count/ratings-count.twig
@@ -21,10 +21,12 @@
 <div class="ratings-count">
   {{ rating }} of 5
   <div class="ratings-count__stars ratings-count__stars--{{rating_round}}">
-    {% include icon %}
-    {% include icon %}
-    {% include icon %}
-    {% include icon %}
-    {% include icon %}
+    {% if icon %}
+      {% include icon %}
+      {% include icon %}
+      {% include icon %}
+      {% include icon %}
+      {% include icon %}
+    {% endif %}
   </div>
 </div>
