--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/icon-button/icon-button.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/icon-button/icon-button.twig
@@ -1,5 +1,5 @@
 <a class="icon-button {% if variation %}icon-button--{{variation}}{% endif %}{% if animated %} js-section-animation{% endif %}" href="{{ url }}">
-  {% if icon %}
+  {% if button_icon %}
     <span class="icon-button__container">{% include button_icon %}</span>
   {% endif %}
   {{ text }}
