--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/ratings-count/ratings-count.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/ratings-count/ratings-count.twig
@@ -21,12 +21,12 @@
 <div class="ratings-count">
   {{ rating }} of 5
   <div class="ratings-count__stars ratings-count__stars--{{rating_round}}">
-    {% if icon %}
-      {% include icon %}
-      {% include icon %}
-      {% include icon %}
-      {% include icon %}
-      {% include icon %}
+    {% if rating_icon %}
+      {% include rating_icon %}
+      {% include rating_icon %}
+      {% include rating_icon %}
+      {% include rating_icon %}
+      {% include rating_icon %}
     {% endif %}
   </div>
 </div>
