--- a/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
@@ -89,7 +89,7 @@
       "link": {
         "url": url,
         "text": "Request an Appointment"|t,
-        "icon": cal_icon,
+        "button_icon": button_icon,
       }
     }
 } %}
