--- a/docroot/themes/custom/tower_health/templates/fields/field--field_rating_comments_ref.html.twig
+++ b/docroot/themes/custom/tower_health/templates/fields/field--field_rating_comments_ref.html.twig
@@ -40,7 +40,7 @@
 #}
 
 {% include "@organisms/review-listing/review-listing.twig" with {
-  "icon": icon,
+  "rating_icon": rating_icon,
   "reviews": reviews,
   "rating": rating
 } %}
