--- a/docroot/themes/custom/tower_health/templates/layout/page--profile.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/page--profile.html.twig
@@ -44,7 +44,8 @@
  */
 #}
 {% include "@pages/_page.twig" with {
-  "appt_icon": cal_icon,
+  "button_icon": button_icon,
+  "rating_icon": rating_icon,
   "page_header": page.page_header,
   "top_sidebar": page.sidebar_first ?? ''
 } %}
