show review numbers

--- a/docroot/themes/custom/tower_health/templates/fields/field--field_rating_comments_ref.html.twig
+++ b/docroot/themes/custom/tower_health/templates/fields/field--field_rating_comments_ref.html.twig
@@ -42,5 +42,6 @@
 {% include "@organisms/review-listing/review-listing.twig" with {
   "rating_icon": rating_icon,
   "reviews": reviews,
-  "rating": rating
+  "rating": rating,
+  "count": count
 } %}
