--- a/docroot/themes/custom/tower_health/templates/layout/region--page-header--profile.html.twig
+++ b/docroot/themes/custom/tower_health/templates/layout/region--page-header--profile.html.twig
@@ -13,6 +13,26 @@
  */
 #}
 
-{% include "@organisms/provider-header/provider-header.twig" with {
-  "name": name
+{% embed "@organisms/provider-header/provider-header.twig" with {
+  "img": {
+    "src": src,
+    "alt": alt
+  },
+  "name": name,
+  "lead_title": lead_title,
+  "provider_video": provider_video,
+  "rating": rating,
+  "review_amt": review_amt,
+  "appt_phone": {
+    "number": phone,
+    "label": phone
+  },
+  "appt_url": "#",
+  "appt_label": "Request an Appointment"|t
 } %}
+
+  {% block breadcrumb %}
+    {{ drupal_block('system_breadcrumb_block') }}
+  {% endblock %}
+
+{% endembed %}
